--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,70 @@
 </head>
 
 <body>
+    <section class="promo">
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header__logo">
+                    <img src="img/run-smart-logo.png" alt="RunSmart logo">
+                </a>
+                <div class="header__official">
+                    Официальный представитель
+                    <span>Garmin, Polar, Suunto</span>
+                </div>
+                <div class="header__contacts">
+                    <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <button class="button button_mobile">заказать звонок</button>
+                </div>
+            </header>
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра </h1>
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="icons/time.png" alt="Time"> Время подбора:<br>10 минут
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/delivery.png" alt="Free delivery"> Бесплатная доставка
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/messages.png" alt="Responding"> Ответим<br>на все вопросы
+                    </div>
+                </div>
+                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <div class="promo__link">
+                    или
+                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="advantages">
+        <div class="container">
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <img src="icons/cup.png" alt="cup">
+                    <h3 class="advantages__header">Делимся опытом</h3>
+                    <div class="advantages__text">
+                        Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/heart.png" alt="health">
+                    <h3 class="advantages__header">Заботимся о здоровье</h3>
+                    <div class="advantages__text">
+                        Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/shoe.png" alt="run">
+                    <h3 class="advantages__header">Учим бегать</h3>
+                    <div class="advantages__text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России -
+                        <a href="#">I LOVE RUNNING</a>.</div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
