added consultation section desktop and mobile

--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,22 @@
             </div>
         </div>
     </section>
+    <section class="consultation">
+        <div class="container">
+            <div class="title title_white">
+                Получите бесплатную консультацию по подбору пульсометра
+            </div>
+            <div class="consultation__descr">
+                Просто заполните форму заявки и мы перезвоним вам в течении 10 минут
+            </div>
+            <form action="#" class="contact-form contact-form_main">
+                <input required name="name" placeholder="Ваше имя" type="text">
+                <input required name="phone" placeholder="Ваш телефон" type="tel">
+                <input required name="email" placeholder="Ваш E-mail" type="email">
+                <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
+        </div>
+    </section>
 
 </body>
 
