--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/style.min.css">
     <title>RunSmart</title>
 </head>
@@ -92,6 +93,26 @@
             </form>
         </div>
     </section>
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/polar-1.jpg" alt="polar 1">
+                </div>
+                <div>
+                    <img src="img/polar-2.jpg" alt="polar 2">
+                </div>
+                <div>
+                    <img src="img/polar-3.jpg" alt="polar 3">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
