--- a/src/index.html
+++ b/src/index.html
@@ -509,6 +509,79 @@
         </div>
 
     </section>
+    <section class="reviews">
+        <div class="container">
+            <div class="title">отзывы клиентов</div>
+            <div class="reviews__wrapper">
+                <div class="reviews__item reviews__item_mb">
+                    <img src="img/reviews/iren.png" alt="irina" class="reviews__img">
+                    <div class="reviews__details">
+                        <div class="reviews__name">Ирина Иванченко</div>
+                        <div class="reviews__marathon">2 полумарафона</div>
+                        <div class="reviews__text">
+                            <p>
+                                Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности. Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.
+                            </p>
+                            <p>
+                                Новые цели - новый гаджет!
+                            </p>
+                            <p>
+                                Спасибо, RunSmart!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="reviews__item reviews__item_mb">
+                    <img src="img/reviews/ivan.png" alt="ivan" class="reviews__img">
+                    <div class="reviews__details">
+                        <div class="reviews__name">Иван Сёмочкин</div>
+                        <div class="reviews__marathon">1 полумарафон</div>
+                        <div class="reviews__text">
+                            <p>
+                                Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили
+                                план тренировок на месяц вперёд.
+
+                            </p>
+                            <p>
+                                С ними подготовился к своему первому полумарафону! Спасибо!!!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="reviews__item">
+                    <img src="img/reviews/julie.jpg" alt="yulya" class="reviews__img">
+                    <div class="reviews__details">
+                        <div class="reviews__name">Юлия Дашкина</div>
+                        <div class="reviews__marathon">2 полумарафона</div>
+                        <div class="reviews__text">
+                            <p>
+                                Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.
+                            </p>
+                            <p>
+                                Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!
+                            </p>
+                            <p>
+                                Спасибо!!!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A7dac324037f48848ce3fbdd56bf7941de0459a1a28c5372c7829caa248fb1647&amp;source=constructor" width="100%" height="630" frameborder="0"></iframe>
+        </iframe>
+        <div class="footer__contacts">
+            <address class="footer__address">Москва, Мясницкий проезд, д.3с1</address>
+            <a href="tel:74999228974" class="footer__phone">8 (499) 922-89-74</a>
+            <div class="footer__social">
+                <div class="footer__social-item"><img src="icons/fb.png" alt="facebook"></div>
+                <div class="footer__social-item"><img src="icons/ig.png" alt="instagram"></div>
+                <div class="footer__social-item"><img src="icons/pin.png" alt="pinterest"></div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
