--- a/src/index.html
+++ b/src/index.html
@@ -570,8 +570,6 @@
         </div>
     </section>
     <footer class="footer">
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A7dac324037f48848ce3fbdd56bf7941de0459a1a28c5372c7829caa248fb1647&amp;source=constructor" width="100%" height="630" frameborder="0"></iframe>
-        </iframe>
         <div class="footer__contacts">
             <address class="footer__address">Москва, Мясницкий проезд, д.3с1</address>
             <a href="tel:74999228974" class="footer__phone">8 (499) 922-89-74</a>
@@ -581,6 +579,7 @@
                 <div class="footer__social-item"><img src="icons/pin.png" alt="pinterest"></div>
             </div>
         </div>
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A12f2c20859b900a0abed461487a8db6273d1e50b3e8a560ddd12c31eeeb4995a&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=false"></script>
     </footer>
 
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
