--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="header__contacts">
                     <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                    <button class="button button_mobile">заказать звонок</button>
+                    <button data-modal="consultation" class="button button_mobile">заказать звонок</button>
                 </div>
             </header>
             <div class="promo__wrapper">
@@ -42,7 +42,7 @@
                         <img src="icons/messages.png" alt="Responding"> Ответим<br>на все вопросы
                     </div>
                 </div>
-                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <button data-modal="consultation" class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
                 <div class="promo__link">
                     или
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -186,7 +186,7 @@
                     <div class="catalog__wrapper">
                         <div class="catalog__product catalog__product_active">
                             <img class="catalog__img" src="img/polar-product.jpg" alt="polar">
-                            <div class="catalog__title">Пульсометр Polar FT1</div>
+                            <div class="catalog__title">Пульсометр Polar FT2</div>
                             <div class="catalog__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
@@ -215,7 +215,7 @@
                     <div class="catalog__wrapper">
                         <div class="catalog__product catalog__product_active">
                             <img class="catalog__img" src="img/polar-product.jpg" alt="polar">
-                            <div class="catalog__title">Пульсометр Polar FT1</div>
+                            <div class="catalog__title">Пульсометр Polar FT3</div>
                             <div class="catalog__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
@@ -244,7 +244,7 @@
                     <div class="catalog__wrapper">
                         <div class="catalog__product catalog__product_active">
                             <img class="catalog__img" src="img/polar-product.jpg" alt="polar">
-                            <div class="catalog__title">Пульсометр Polar FT1</div>
+                            <div class="catalog__title">Пульсометр Polar FT4</div>
                             <div class="catalog__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
@@ -273,7 +273,7 @@
                     <div class="catalog__wrapper">
                         <div class="catalog__product catalog__product_active">
                             <img class="catalog__img" src="img/polar-product.jpg" alt="polar">
-                            <div class="catalog__title">Пульсометр Polar FT1</div>
+                            <div class="catalog__title">Пульсометр Polar FT5</div>
                             <div class="catalog__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
@@ -302,67 +302,7 @@
                     <div class="catalog__wrapper">
                         <div class="catalog__product catalog__product_active">
                             <img class="catalog__img" src="img/polar-product.jpg" alt="polar">
-                            <div class="catalog__title">Пульсометр Polar FT1</div>
-                            <div class="catalog__descr">
-                                Для первых шагов в тренировках, основанных на сердечном ритме
-                            </div>
-                            <a href="#" class="catalog__details-link">ПОДРОБНЕЕ</a>
-                        </div>
-                        <div class="catalog__details">
-                            <ul class="catalog__list">
-                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
-                            </ul>
-                            <a href="#" class="catalog__back-link">назад</a>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="catalog__footer">
-                        <div class="catalog__prices">
-                            <div class="catalog__old-price">4 750 руб.</div>
-                            <div class="catalog__price">4 500 руб.</div>
-                        </div>
-                        <button class="button button_mini">КУПИТЬ</button>
-                    </div>
-                </div>
-            </div>
-            <div class="catalog__content">
-                <div class="catalog__item">
-                    <div class="catalog__wrapper">
-                        <div class="catalog__product catalog__product_active">
-                            <img class="catalog__img" src="img/polar-product.jpg" alt="polar">
-                            <div class="catalog__title">Пульсометр Polar FT1</div>
-                            <div class="catalog__descr">
-                                Для первых шагов в тренировках, основанных на сердечном ритме
-                            </div>
-                            <a href="#" class="catalog__details-link">ПОДРОБНЕЕ</a>
-                        </div>
-                        <div class="catalog__details">
-                            <ul class="catalog__list">
-                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
-                            </ul>
-                            <a href="#" class="catalog__back-link">назад</a>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="catalog__footer">
-                        <div class="catalog__prices">
-                            <div class="catalog__old-price">4 750 руб.</div>
-                            <div class="catalog__price">4 500 руб.</div>
-                        </div>
-                        <button class="button button_mini">КУПИТЬ</button>
-                    </div>
-                </div>
-                <div class="catalog__item">
-                    <div class="catalog__wrapper">
-                        <div class="catalog__product catalog__product_active">
-                            <img class="catalog__img" src="img/polar-product.jpg" alt="polar">
-                            <div class="catalog__title">Пульсометр Polar FT1</div>
+                            <div class="catalog__title">Пульсометр Polar FT6</div>
                             <div class="catalog__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
@@ -393,7 +333,7 @@
                     <div class="catalog__wrapper">
                         <div class="catalog__product catalog__product_active">
                             <img class="catalog__img" src="img/polar-product.jpg" alt="polar">
-                            <div class="catalog__title">Пульсометр Polar FT1</div>
+                            <div class="catalog__title">Пульсометр Polar FT7</div>
                             <div class="catalog__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
@@ -422,7 +362,38 @@
                     <div class="catalog__wrapper">
                         <div class="catalog__product catalog__product_active">
                             <img class="catalog__img" src="img/polar-product.jpg" alt="polar">
-                            <div class="catalog__title">Пульсометр Polar FT1</div>
+                            <div class="catalog__title">Пульсометр Polar FT8</div>
+                            <div class="catalog__descr">
+                                Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
+                            <a href="#" class="catalog__details-link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <div class="catalog__details">
+                            <ul class="catalog__list">
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
+                            <a href="#" class="catalog__back-link">назад</a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="catalog__footer">
+                        <div class="catalog__prices">
+                            <div class="catalog__old-price">4 750 руб.</div>
+                            <div class="catalog__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_mini">КУПИТЬ</button>
+                    </div>
+                </div>
+            </div>
+            <div class="catalog__content">
+                <div class="catalog__item">
+                    <div class="catalog__wrapper">
+                        <div class="catalog__product catalog__product_active">
+                            <img class="catalog__img" src="img/polar-product.jpg" alt="polar">
+                            <div class="catalog__title">Пульсометр Polar FT9</div>
                             <div class="catalog__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
@@ -451,7 +422,7 @@
                     <div class="catalog__wrapper">
                         <div class="catalog__product catalog__product_active">
                             <img class="catalog__img" src="img/polar-product.jpg" alt="polar">
-                            <div class="catalog__title">Пульсометр Polar FT1</div>
+                            <div class="catalog__title">Пульсометр Polar FT10</div>
                             <div class="catalog__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
@@ -480,7 +451,36 @@
                     <div class="catalog__wrapper">
                         <div class="catalog__product catalog__product_active">
                             <img class="catalog__img" src="img/polar-product.jpg" alt="polar">
-                            <div class="catalog__title">Пульсометр Polar FT1</div>
+                            <div class="catalog__title">Пульсометр Polar FT11</div>
+                            <div class="catalog__descr">
+                                Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
+                            <a href="#" class="catalog__details-link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <div class="catalog__details">
+                            <ul class="catalog__list">
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
+                            <a href="#" class="catalog__back-link">назад</a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="catalog__footer">
+                        <div class="catalog__prices">
+                            <div class="catalog__old-price">4 750 руб.</div>
+                            <div class="catalog__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_mini">КУПИТЬ</button>
+                    </div>
+                </div>
+                <div class="catalog__item">
+                    <div class="catalog__wrapper">
+                        <div class="catalog__product catalog__product_active">
+                            <img class="catalog__img" src="img/polar-product.jpg" alt="polar">
+                            <div class="catalog__title">Пульсометр Polar FT12</div>
                             <div class="catalog__descr">
                                 Для первых шагов в тренировках, основанных на сердечном ритме
                             </div>
@@ -581,6 +581,39 @@
         </div>
         <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A12f2c20859b900a0abed461487a8db6273d1e50b3e8a560ddd12c31eeeb4995a&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=false"></script>
     </footer>
+
+    <div class="overlay">
+        <div class="modal" id="consultation">
+            <div class="modal__close">&times;</div>
+            <div class="modal__title">Просто заполните форму заявки</div>
+            <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+            <form action="#" class="contact-form contact-form_modal">
+                <input required name="name" placeholder="Ваше имя" type="text">
+                <input required name="phone" placeholder="Ваш телефон" type="tel">
+                <input required name="email" placeholder="Ваш E-mail" type="email">
+                <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
+        </div>
+
+        <div class="modal" id="order">
+            <div class="modal__close">&times;</div>
+            <div class="modal__title">Ваш заказ:</div>
+            <div class="modal__descr">Пульсометр Polar FT1</div>
+            <form action="#" class="contact-form contact-form_modal">
+                <input required name="name" placeholder="Ваше имя" type="text">
+                <input required name="phone" placeholder="Ваш телефон" type="tel">
+                <input required name="email" placeholder="Ваш E-mail" type="email">
+                <button class="button button_submit">Купить</button>
+            </form>
+        </div>
+
+        <div class="modal modal_mini" id="thanks">
+            <div class="modal__close">&times;</div>
+            <div class="modal__title">Спасибо за вашу заявку!</div>
+            <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
+
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
